--- a/app/src/main/res/layout/activity_content_image_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_image_detail_screen.xml
@@ -91,7 +91,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:id="@+id/content_detail_like_enabler"
+                android:id="@+id/content_detail_like_enabler_img_detail_screen"
                 android:layout_height="wrap_content">
 
                 <tv.merabihar.app.merabihar.Adapter.AutoScrollAdapter
@@ -151,6 +151,17 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/whatsapp_icons"
 
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/whatsapp_share_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:layout_gravity="center"
                         />
 
 
@@ -294,13 +305,34 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:gravity="center"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:id="@+id/post_watched_layout"
                     android:orientation="vertical"
 
                     >
 
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/eye_black"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/post_total_watched_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
