--- a/app/src/main/res/layout/activity_time_watched_screen.xml
+++ b/app/src/main/res/layout/activity_time_watched_screen.xml
@@ -215,6 +215,33 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_height="0dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:paddingLeft="15dp"
+                android:layout_height="match_parent"
+                android:text="Lifetime"
+                android:gravity="left"
+                android:textSize="17sp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:textSize="17sp"
+                android:paddingRight="15dp"
+                android:layout_height="match_parent"
+                android:gravity="right"
+                android:text="0 hr 0 min"
+                android:id="@+id/lifetime_watched_time"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="match_parent"
