--- a/app/src/main/res/layout/fragment_for_you_new.xml
+++ b/app/src/main/res/layout/fragment_for_you_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.SwipeRefreshLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -42,4 +42,4 @@
 <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
 
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
