--- a/app/src/main/res/layout/activity_content_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_detail_screen.xml
@@ -110,26 +110,25 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#000000">
 
                 <fragment
-                    android:layout_below="@+id/id_video_play_text"
                     android:id="@+id/youtube_player_fragment_top"
                     android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="350dp"/>
+                    android:layout_height="350dp"
+                    android:layout_below="@+id/id_video_play_text"
+                    android:layout_gravity="bottom" />
 
                 <ImageView
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:tint="@color/white"
-                    android:visibility="gone"
                     android:id="@+id/back_view"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    app:srcCompat="@drawable/ic_back2"/>
-
-
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/logo_mbtv"
+                    android:visibility="gone" />
 
 
             </FrameLayout>
