--- a/app/src/main/res/layout/activity_content_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_detail_screen.xml
@@ -121,6 +121,29 @@
                     android:layout_below="@+id/id_video_play_text"
                     android:layout_gravity="bottom" />
 
+
+
+                <RelativeLayout
+                    android:id="@+id/adView"
+                    android:visibility="gone"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="350dp"
+                    android:layout_alignParentBottom="true">
+
+                    <TextView
+                        android:id="@+id/ad_close"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:textColor="@color/white"
+                        android:layout_alignParentRight="true"
+                        android:text="X"
+                        android:background="@drawable/circular_txt_view"
+                        android:textStyle="bold"
+                        android:gravity="center" />
+                </RelativeLayout>
+
                 <ImageView
                     android:id="@+id/back_view"
                     android:layout_width="25dp"
