Youtube Player listner

--- a/app/src/main/res/layout/activity_content_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_detail_screen.xml
@@ -10,6 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/adView_bottom"
         android:scrollbars="none">
 
         <LinearLayout
@@ -507,9 +508,22 @@
 
     </ScrollView>
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="@string/video_down_ad"
+
+
+        >
+    </com.google.android.gms.ads.AdView>
 
 
     <!--<LinearLayout
+    app:adUnitId="ca-app-pub-2910452066154587/4449908992"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
