--- a/app/src/main/res/layout/reward_list_single_layout.xml
+++ b/app/src/main/res/layout/reward_list_single_layout.xml
@@ -2,6 +2,7 @@
     android:layout_width="match_parent"
     android:visibility="visible"
     android:orientation="vertical"
+    android:id="@+id/friend_main"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
