--- a/app/src/main/res/layout/activity_content_image_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_image_detail_screen.xml
@@ -497,7 +497,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         app:adSize="SMART_BANNER"
-        app:adUnitId="ca-app-pub-2910452066154587/4449908992"
+        app:adUnitId="@string/image_down_ad"
 
         >
     </com.google.android.gms.ads.AdView>
