--- a/app/src/main/res/layout/adapter_content_lists_design.xml
+++ b/app/src/main/res/layout/adapter_content_lists_design.xml
@@ -506,14 +506,16 @@
         android:layout_height="300dp"
         android:layout_alignParentBottom="true"/>-->
 
-    <!--<com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
 
-        app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-2910452066154587/4449908992"
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView_recycler"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="@string/recycler_ad"
         >
-    </com.google.android.gms.ads.AdView>-->
+    </com.google.android.gms.ads.AdView>
 
 </LinearLayout>
