--- a/app/src/main/res/layout/fragment_follow_content_single_layout.xml
+++ b/app/src/main/res/layout/fragment_follow_content_single_layout.xml
@@ -298,6 +298,14 @@
         </LinearLayout>
 
     </LinearLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView_search"
 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="@string/search_ad"
+        >
+    </com.google.android.gms.ads.AdView>
 
 </LinearLayout>
