--- a/app/src/main/res/layout/news_content_adapter.xml
+++ b/app/src/main/res/layout/news_content_adapter.xml
@@ -1,5 +1,6 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/CardView.Light"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -60,6 +61,16 @@
             android:layout_marginStart="16dp"
             android:textColor="#DE000000"
              />
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView_news"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:adSize="SMART_BANNER"
+            app:adUnitId="@string/news_ad"
+            >
+        </com.google.android.gms.ads.AdView>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
