Youtube Player listner

--- a/app/src/main/res/layout/activity_watched_histroy_screen.xml
+++ b/app/src/main/res/layout/activity_watched_histroy_screen.xml
@@ -55,11 +55,21 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:id="@+id/referal_profile"
+                android:textColor="#000000"
+                android:visibility="gone"
+                android:textSize="16dp"
+                android:gravity="center_vertical"
+                android:padding="5dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
                 android:id="@+id/referalCodeUsed"
                 android:text="Referal Code Used "
                 android:textColor="#000000"
                 android:visibility="gone"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:gravity="center_vertical"
                 android:padding="5dp"/>
 
