Youtube Player listner

--- a/app/src/main/res/layout/ad_exit_pop_up.xml
+++ b/app/src/main/res/layout/ad_exit_pop_up.xml
@@ -23,7 +23,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="280x280"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+        ads:adUnitId="@string/pop_ad">
     </com.google.android.gms.ads.NativeExpressAdView>
 
 
