--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,10 +10,101 @@
     android:verticalSpacing="10dp"
     tools:context=".YoutubeUpload.ReviewActivity">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10.0dip"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginRight="10dp"
+            android:text="Title"/>
+
+        <EditText
+            android:id="@+id/title_video"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="start"
+            android:gravity="start"
+            android:padding="3dp"
+            android:hint="Title..."
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:overScrollMode="always"
+            android:scrollbarStyle="insideInset"
+            android:scrollbars="vertical"
+            android:keepScreenOn="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:lines="2"
+            android:background="@drawable/rect_grayoutline1"
+
+            />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10.0dip"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginRight="10dp"
+            android:text="Story"/>
+
+        <EditText
+            android:id="@+id/long_desc_blog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="start"
+            android:gravity="start"
+            android:padding="3dp"
+            android:hint="Say something..."
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:overScrollMode="always"
+            android:scrollbarStyle="insideInset"
+            android:scrollbars="vertical"
+            android:keepScreenOn="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:lines="8"
+            android:background="@drawable/rect_grayoutline1"
+
+            />
+
+
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/detail_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="5dp"
         android:layout_weight="1">
 
         <VideoView
@@ -46,4 +138,6 @@
 
     </LinearLayout>
 
-</LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
